fix overflow issue

--- a/style.css
+++ b/style.css
@@ -48,6 +48,7 @@ main {
 .book {
     background-color: rgb(108, 54, 3);
     color: #f1f1f1;
+    overflow: auto;
     min-width: 230px;
     height: 270px;
     padding: 10px;
